[package]
name = "alveograph-exporter-s"
version = "0.1.0"
authors = ["Nicholas Sixbury", "Sophia Grothe"]
rust-version = "1.80.1"
description = "This project is an application created for use at USDA-ARS Manhattan,KS to process output from the alveograph."
readme = "README.md"
repository = "https://github.com/nico6bury/usda-alveograph-exporter"
exclude = ["/target","/.vscode"]
edition = "2021"

[dependencies]
fltk = { version = "1.4.33", features = ["use-ninja"] }
time = { version = "0.3.36", features = ["macros", "formatting"] }
compile-time = "0.2.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
rust_xlsxwriter = "0.76.0"
opener = { version = "0.7.2", features = ["reveal"] }
